--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
+    "bootstrap": "^5.2.0",
     "lodash": "^4.17.21",
     "next": "12.2.3",
     "react": "18.2.0",
